inicio de configuracion del header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<div class="container">
-  <h1 class="text-center">¡Hola, Bootstrap 5.3 en Angular!</h1>
-  <button class="btn btn-primary">Botón Bootstrap</button>
-</div>
+<router-outlet></router-outlet>
