inici seccion aboout me

--- a/src/app/domains/main/pages/main-page/main-page.component.html
+++ b/src/app/domains/main/pages/main-page/main-page.component.html
@@ -1,20 +1,55 @@
-<div class="container-fluid">
+<div class="principalContainer row">
 
-    <div class="Header">
-        <p><i class="bi bi-lightbulb-fill"></i>¡Hola Soy Juan Camilo! <i class="bi bi-lightbulb-fill"></i>
-            <br>
-            <b>Desarrollador FullStack</b>
-            <br>
-            <button>Sobre mi</button>
-            <button>Descarrga Cv</button>
-            <button>Contactame</button>
-        </p>
-        <br>
+    <div class="Header container row">
 
+        <div class="row">
 
+            <div class="row">
+                <div class="col-sm-12">
+                    <p>
+                        <i class="bi bi-lightbulb-fill"></i>¡Hola Soy Juan Camilo! <i class="bi bi-lightbulb-fill"></i>
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <p>
+                        <b>Desarrollador FullStack</b>
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-4"></div>
+                <div class="col-sm-4">
+                    <div class="row headerBtn">
+                        <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Sobre mi <i class="bi bi-person"></i></button></div>
+                        <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Contactame</button></div>
+                        <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Descarga CV</button></div>
+                    </div>
+                </div>
+                <div class="col-sm-4"></div>
+            </div>
+
+        </div>
 
 
     </div>
 
+    <div class="annoutMe container row">
+
+        <div class="col-sm-6 containerImage">
+
+            <div class="framed-photo">
+                <img src="https://avatars.githubusercontent.com/u/43991800" alt="Foto" width="300">
+              </div>
+
+        </div>
+
+        <div class="col-sm-6 containerImage">
+        </div>
+
+    </div>
 
 </div>
