--- a/src/app/domains/main/pages/main-page/main-page.component.css
+++ b/src/app/domains/main/pages/main-page/main-page.component.css
@@ -1,8 +1,8 @@
-.container-fluid {
+.principalContainer{
     margin: 0;
     padding: 0;
     height: 100vh;
-    width: 100vw;
+    width: 99.2vw;
     display: flex;
     justify-content: center;
     background: black;
@@ -12,6 +12,8 @@
 
 .Header{
     background: rgb(0, 0, 0);
+    margin: 0;
+    padding: 0;
     width: 100%;
     height: 600px;
     display: flex;
@@ -31,17 +33,64 @@
     font-size: 3rem;
 }
 
-@keyframes glowAnimation {
-    0% {
-        text-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* Initial glow color and intensity */
-    }
-    50% {
-        text-shadow: 0 0 50px rgba(255, 255, 0, 0.8); /* Intermediate glow color and intensity */
-    }
-    100% {
-        text-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* Final glow color and intensity */
-    }
+.headerBtn button{
+    width: 130px;
 }
 
 
-/**/
+/*about me*/
+
+.annoutMe{
+    margin: 0;
+    padding: 0;
+    background: rgb(78, 78, 78);
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 2rem;
+    color: rgb(77, 77, 77);
+
+}
+
+.framed-photo {
+    position: relative;
+    display: inline-block;
+  }
+  .framed-photo img {
+    display: block;
+    width: 300px;
+    border-radius: 50%; 
+  }
+  .framed-photo::before {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    right: -10px;
+    bottom: -10px;
+    border: 5px solid #333;
+    border-radius: 50%; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    animation: animate-border 5s linear infinite;
+  }
+  @keyframes animate-border {
+    0% {
+      border-color: #333;
+      border: 50px ;
+    }
+    25% {
+      border-color: #ff0000;
+    }
+    50% {
+      border-color: #00ff00;
+    }
+    75% {
+      border-color: #0000ff;
+    }
+    100% {
+      border-color: #333;
+    }
+  }
