--- a/src/app/domains/main/pages/main-page/main-page.component.html
+++ b/src/app/domains/main/pages/main-page/main-page.component.html
@@ -1,7 +1,8 @@
 <div class="principalContainer row">
 
-    <div class="Header container row">
 
+    <!--header-->
+    <div class="Header container row">
         <div class="row">
 
             <div class="row">
@@ -33,23 +34,39 @@
             </div>
 
         </div>
+    </div>
+    
+    <!--abboutMe-->
+    <div class="aboutMe container row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+            <div class="row">
+                
+                <div class="col-sm-6 containerImage">
 
-
+                    <div class="framed-photo">
+                        <img src="https://avatars.githubusercontent.com/u/43991800" alt="Foto">
+                      </div>
+        
+                </div>
+        
+                <div class="col-sm-6 containerText">
+        
+                    <p>
+                        Soy un desarrollador fullstack y multimedia, actualmente especializado en el desarrollo web y de software personalizado.
+                    </p>
+        
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-1"></div>
     </div>
 
+    <!--Experience-->
     <div class="annoutMe container row">
 
-        <div class="col-sm-6 containerImage">
-
-            <div class="framed-photo">
-                <img src="https://avatars.githubusercontent.com/u/43991800" alt="Foto" width="300">
-              </div>
-
-        </div>
-
-        <div class="col-sm-6 containerImage">
-        </div>
-
     </div>
+
+    
 
 </div>
