Se importa bootrap icons por el cdn

--- a/src/app/domains/main/pages/main-page/main-page.component.html
+++ b/src/app/domains/main/pages/main-page/main-page.component.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <p>
-                        <b>Desarrollador FullStack</b>
+                        <b>Desarrollador FullStack Multimedia</b>
                     </p>
                 </div>
             </div>
