--- a/src/app/domains/main/pages/main-page/main-page.component.css
+++ b/src/app/domains/main/pages/main-page/main-page.component.css
@@ -21,26 +21,8 @@
   text-align: center;
   font-size: 2rem;
   color: white;
-  background: linear-gradient(45deg, #000000, #1c1c1c, #2e2e2e, #3c3c3c, #000000);
-  background-size: 300% 300%;
-  animation: gradientAnimation 30s ease infinite;
+  background: black;
 }
-
-@keyframes gradientAnimation {
-  0% {
-    background-position: 0% 50%;
-  }
-
-  50% {
-    background-position: 100% 50%;
-  }
-
-  100% {
-    background-position: 0% 50%;
-  }
-}
-
-
 
 .Header i {
   color: yellow;
@@ -65,14 +47,18 @@
   padding: 0;
   background: rgb(0, 0, 0);
   width: 100%;
-  height: 400px;
+  padding: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   font-size: 2rem;
   color: rgb(255, 255, 255);
+ 
+}
 
+.containerImage {
+  padding: 30px;
 }
 
 .containerText {
@@ -80,6 +66,7 @@
   display: flex;
   align-items: center;
   font-size: 1.3rem;
+  padding: 30px;
 }
 
 
@@ -102,8 +89,6 @@
   left: -4px;
   right: -4px;
   bottom: -4px;
-  border: 5px solid rgba(255, 255, 255, 0.5);
   border-radius: 50%;
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
   
 }
