header y abboutme terminados

--- a/src/app/domains/main/pages/main-page/main-page.component.html
+++ b/src/app/domains/main/pages/main-page/main-page.component.html
@@ -7,7 +7,7 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <p>
+                    <p class="myName">
                         <i class="bi bi-lightbulb-fill"></i>¡Hola Soy Juan Camilo! <i class="bi bi-lightbulb-fill"></i>
                     </p>
                 </div>
@@ -25,9 +25,12 @@
                 <div class="col-sm-4"></div>
                 <div class="col-sm-4">
                     <div class="row headerBtn">
-                        <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Sobre mi <i class="bi bi-person"></i></button></div>
-                        <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Contactame</button></div>
-                        <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Descarga CV</button></div>
+                        <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Sobre Mi <i
+                                    class="bi bi-person"></i></button></div>
+                        <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Contactame <i
+                                    class="bi bi-envelope"></i></button></div>
+                        <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Descarga CV <i
+                                    class="bi bi-caret-down-square-fill"></i></button></div>
                     </div>
                 </div>
                 <div class="col-sm-4"></div>
@@ -35,27 +38,29 @@
 
         </div>
     </div>
-    
+
     <!--abboutMe-->
     <div class="aboutMe container row">
         <div class="col-sm-1"></div>
         <div class="col-sm-10">
             <div class="row">
-                
+
                 <div class="col-sm-6 containerImage">
 
                     <div class="framed-photo">
                         <img src="https://avatars.githubusercontent.com/u/43991800" alt="Foto">
-                      </div>
-        
+                    </div>
+
                 </div>
-        
+
                 <div class="col-sm-6 containerText">
-        
-                    <p>
-                        Soy un desarrollador fullstack y multimedia, actualmente especializado en el desarrollo web y de software personalizado.
-                    </p>
-        
+                    <div class="paralelepipedo">
+                        <p>
+                            <b>Sobre Mi</b>
+                            <br>
+                            Soy un desarrollador FullStack y Multimedia, actualmente especializado en el desarrollo web y de software personalizado.
+                        </p>
+                    </div>           
                 </div>
             </div>
         </div>
@@ -67,6 +72,6 @@
 
     </div>
 
-    
+
 
 </div>
