--- a/src/app/domains/main/pages/main-page/main-page.component.css
+++ b/src/app/domains/main/pages/main-page/main-page.component.css
@@ -24,7 +24,7 @@
   background: black;
 }
 
-.Header i {
+.Header .myName i {
   color: yellow;
   text-shadow: 0 0 50px rgba(255, 255, 0, 1);
 }
@@ -34,7 +34,7 @@
 }
 
 .headerBtn button {
-  width: 130px;
+  width: 140px;
 }
 
 
@@ -54,21 +54,12 @@
   text-align: center;
   font-size: 2rem;
   color: rgb(255, 255, 255);
- 
+
 }
 
 .containerImage {
   padding: 30px;
 }
-
-.containerText {
-  text-align: left;
-  display: flex;
-  align-items: center;
-  font-size: 1.3rem;
-  padding: 30px;
-}
-
 
 
 .framed-photo {
@@ -90,5 +81,37 @@
   right: -4px;
   bottom: -4px;
   border-radius: 50%;
-  
+
+}
+
+.containerText {
+  text-align: left;
+  display: flex;
+  align-items: center;
+  font-size: 1.3rem;
+  padding: 30px;
+}
+
+.paralelepipedo {
+  position: relative;
+  width: 100%;
+  height: auto;
+  background-color: rgb(208, 204, 203);
+  color: black;
+  padding: 30px;
+  border-radius: 20px;
+}
+
+@media (min-width: 1116px) {
+
+  .paralelepipedo {
+    padding: 20px;
+    padding-right: 60px;
+    padding-left: 60px;
+    transform: skewX(-30deg);
+    border-radius: 20px;
+  }
+  .paralelepipedo p {
+    transform: skewX(30deg);
+  }
 }
