ajuste linea de tiempo

--- a/src/app/domains/main/pages/main-page/main-page.component.html
+++ b/src/app/domains/main/pages/main-page/main-page.component.html
@@ -58,9 +58,10 @@
                         <p>
                             <b>Sobre Mi</b>
                             <br>
-                            Soy un desarrollador FullStack y Multimedia, actualmente especializado en el desarrollo web y de software personalizado.
+                            Soy un desarrollador FullStack y Multimedia, actualmente especializado en el desarrollo web
+                            y de software personalizado.
                         </p>
-                    </div>           
+                    </div>
                 </div>
             </div>
         </div>
@@ -68,9 +69,44 @@
     </div>
 
     <!--Experience-->
-    <div class="annoutMe container row">
+    <div class="experience container row">
 
-        
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <p><b>Experiencia Laboral</b></p>
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+
+                <div class="timeline">
+                    <div class="timeline-event timeline-event-left">
+                        <p class="position">Analista Programador</p>
+                        <p class="company"> Comestibles Aldor</p>
+                        <p class="duration">Abr 2022 - Feb 2024</p>
+                    </div>
+                    <div class="timeline-event timeline-event-right">
+                        <p class="position">Analista de contenido web</p>
+                        <p class="company"> Colgate Palmolive</p>
+                        <p class="duration">Ene 2022 - Abr 2022</p>
+                    </div>
+                    <div class="timeline-event timeline-event-left">
+                        <p class="position">Desarrollador Web</p>
+                        <p class="company"> Colgate Palmolive</p>
+                        <p class="duration">Jun 2021 - Dic 2021</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-sm-4"></div>
+
+
+        </div>
+
+
 
     </div>
 
