Separacion por componentes

--- a/src/app/domains/main/pages/main-page/main-page.component.html
+++ b/src/app/domains/main/pages/main-page/main-page.component.html
@@ -1,115 +1,9 @@
-<div class="principalContainer row">
+<div class="principalContainer  row">
 
+    <app-header class="row"></app-header>
 
-    <!--header-->
-    <div class="Header container row">
-        <div class="row">
+    <app-about-me class="row"></app-about-me>
 
-            <div class="row">
-                <div class="col-sm-12">
-                    <p class="myName">
-                        <i class="bi bi-lightbulb-fill"></i>¡Hola Soy Juan Camilo! <i class="bi bi-lightbulb-fill"></i>
-                    </p>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-12">
-                    <p>
-                        <b>Desarrollador FullStack Multimedia</b>
-                    </p>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-4"></div>
-                <div class="col-sm-4">
-                    <div class="row headerBtn">
-                        <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Sobre Mi <i
-                                    class="bi bi-person"></i></button></div>
-                        <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Contactame <i
-                                    class="bi bi-envelope"></i></button></div>
-                        <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Descarga CV <i
-                                    class="bi bi-caret-down-square-fill"></i></button></div>
-                    </div>
-                </div>
-                <div class="col-sm-4"></div>
-            </div>
-
-        </div>
-    </div>
-
-    <!--abboutMe-->
-    <div class="aboutMe container row">
-        <div class="col-sm-1"></div>
-        <div class="col-sm-10">
-            <div class="row">
-
-                <div class="col-sm-6 containerImage">
-
-                    <div class="framed-photo">
-                        <img src="https://avatars.githubusercontent.com/u/43991800" alt="Foto">
-                    </div>
-
-                </div>
-
-                <div class="col-sm-6 containerText">
-                    <div class="paralelepipedo">
-                        <p>
-                            <b>Sobre Mi</b>
-                            <br>
-                            Soy un desarrollador FullStack y Multimedia, actualmente especializado en el desarrollo web
-                            y de software personalizado.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-1"></div>
-    </div>
-
-    <!--Experience-->
-    <div class="experience container row">
-
-        <div class="row">
-            <div class="col-sm-12 text-center">
-                <p><b>Experiencia Laboral</b></p>
-            </div>
-        </div>
-
-        <div class="row">
-
-            <div class="col-sm-4"></div>
-            <div class="col-sm-4">
-
-                <div class="timeline">
-                    <div class="timeline-event timeline-event-left">
-                        <p class="position">Analista Programador</p>
-                        <p class="company"> Comestibles Aldor</p>
-                        <p class="duration">Abr 2022 - Feb 2024</p>
-                    </div>
-                    <div class="timeline-event timeline-event-right">
-                        <p class="position">Analista de contenido web</p>
-                        <p class="company"> Colgate Palmolive</p>
-                        <p class="duration">Ene 2022 - Abr 2022</p>
-                    </div>
-                    <div class="timeline-event timeline-event-left">
-                        <p class="position">Desarrollador Web</p>
-                        <p class="company"> Colgate Palmolive</p>
-                        <p class="duration">Jun 2021 - Dic 2021</p>
-                    </div>
-                </div>
-
-            </div>
-            <div class="col-sm-4"></div>
-
-
-        </div>
-
-
-
-    </div>
-
-
+    <app-experience class="row"></app-experience>
 
 </div>
