--- a/src/app/domains/main/components/stack/stack.component.css
+++ b/src/app/domains/main/components/stack/stack.component.css
@@ -15,12 +15,14 @@
     display: flex;
     text-align: left;
     font-size: 1.5rem;
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 
 
 .itemContainer {
     width: 100%;
+    min-height: 120px;
     background-color: rgba(128, 128, 128, 0.096);
     padding: 20px;
     border-radius: 20px;
@@ -43,6 +45,7 @@
 .itemContainer .textContainer {
     display: flex;
     text-align: left;
+    align-items: center;
     font-size: 0.8rem;
     color: rgb(173, 173, 173);
 }
