formulario de contacto implementado (falta envio)

--- a/src/app/domains/main/components/projects/projects.component.html
+++ b/src/app/domains/main/components/projects/projects.component.html
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col-sm-12 text-center">
-            <p><b>Proyectos destacados</b></p>
+            <p><b>Proyectos Destacados</b></p>
         </div>
     </div>
 
