--- a/src/app/domains/main/components/experience/experience.component.css
+++ b/src/app/domains/main/components/experience/experience.component.css
@@ -49,20 +49,19 @@
   width: 20px;
   border-radius: 20px;
   background: linear-gradient(0deg, rgb(13, 110, 253), rgb(255, 0, 150));
+  background-size: 200% 200%;
   animation: gradientAnimation 5s infinite;
 }
 
 @keyframes gradientAnimation {
   0% {
-    background: linear-gradient(0deg, rgb(13, 110, 253), rgb(255, 0, 150));
+    background-position: 0% 0%;
   }
-
   50% {
-    background: linear-gradient(180deg, rgb(255, 0, 150), rgb(13, 110, 253));
+    background-position: 100% 100%;
   }
-
   100% {
-    background: linear-gradient(0deg, rgb(13, 110, 253), rgb(255, 0, 150));
+    background-position: 0% 0%;
   }
 }
 
