correccion de estilos formulario y stack

--- a/src/app/domains/main/components/stack/stack.component.css
+++ b/src/app/domains/main/components/stack/stack.component.css
@@ -63,7 +63,17 @@
 
 @media (max-width: 726px) {
 
+    .stackCategory{
+
+        text-align: center;
+    }
+
     .stackContainer{
+        display: flex;
+        justify-content: center;
+    }
+
+    .stackContainer .stackItemContainer .col-sm-3{
         display: flex;
         justify-content: center;
     }
