--- a/src/app/domains/main/components/contact-me/contact-me.component.css
+++ b/src/app/domains/main/components/contact-me/contact-me.component.css
@@ -22,18 +22,18 @@
 
 .contact-container {
     text-align: left;
-    padding: 40px;
+    padding: 30px;
     border-radius: 10px;
 }
 
 .contact-container h1 {
     margin: 0;
-    font-size: 2.5em;
+    font-size: 3.5rem;
     color: #c4c4c4;
 }
 
 .contact-container p {
-    font-size: 1.2em;
+    font-size: 2rem;
     color: #a3a3a3;
     margin: 20px 0;
 }
