--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'ngx-toastr/toastr';
+
+.toast-container{
+    position: fixed;
+}
+
 *{
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
