--- a/src/app/domains/main/components/stack/stack.component.html
+++ b/src/app/domains/main/components/stack/stack.component.html
@@ -20,11 +20,13 @@
                    
                     <div class="itemContainer row">
                             
-                        <div class="col-sm-3 imageContainer">
+                        <div class="col-sm-2 imageContainer">
                             <img [src]="item.logo" [alt]="item.name">
                         </div>
 
-                        <div class="col-sm-9 textContainer">
+                        <div class="col-sm-1 imageContainer"></div>
+
+                        <div class="col-sm-8 textContainer">
                             <p>
                                 <b>{{item.name}}</b>
                                 <br>
