--- a/src/app/domains/main/pages/main-page/main-page.component.html
+++ b/src/app/domains/main/pages/main-page/main-page.component.html
@@ -12,4 +12,12 @@
 
     <app-contact-me class="row"></app-contact-me>
 
+    @if(showSpinner()){
+    <div class="spinner-container">
+        <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+    }
+
 </div>
