--- a/src/app/domains/main/components/header/header.component.html
+++ b/src/app/domains/main/components/header/header.component.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <p class="myName">
-                    <i class="bi bi-lightbulb-fill"></i>¡Hola Soy Juan Camilo! <i class="bi bi-lightbulb-fill"></i>
+                    <i class="bi bi-lightbulb-fill"></i>¡Hola, Soy Juan Camilo! <i class="bi bi-lightbulb-fill"></i>
                 </p>
             </div>
         </div>
@@ -24,7 +24,7 @@
                 <div class="row headerBtn">
                     <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Sobre Mi <i
                                 class="bi bi-person"></i></button></div>
-                    <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Contactame <i
+                    <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Contáctame <i
                                 class="bi bi-envelope"></i></button></div>
                     <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Descarga CV <i
                                 class="bi bi-caret-down-square-fill"></i></button></div>
