--- a/src/app/domains/main/pages/main-page/main-page.component.html
+++ b/src/app/domains/main/pages/main-page/main-page.component.html
@@ -2,7 +2,7 @@
 
     <app-header class="row"></app-header>
 
-    <app-about-me class="row"></app-about-me>
+    <app-about-me id="aboutMe" class="row"></app-about-me>
 
     <app-experience class="row"></app-experience>
 
@@ -10,7 +10,7 @@
 
     <app-stack class="row"></app-stack>
 
-    <app-contact-me class="row"></app-contact-me>
+    <app-contact-me  id="contactMe" class="row"></app-contact-me>
 
     @if(showSpinner()){
     <div class="spinner-container">
