--- a/src/app/domains/main/components/header/header.component.html
+++ b/src/app/domains/main/components/header/header.component.html
@@ -2,36 +2,49 @@
 <div class="Header  row">
     <div class="row">
 
-        <div class="row">
-            <div class="col-sm-12">
-                <p class="myName">
-                    <i class="bi bi-lightbulb-fill"></i>¡Hola, Soy Juan Camilo! <i class="bi bi-lightbulb-fill"></i>
-                </p>
-            </div>
-        </div>
+        <div class="col-sm-6 containerText">
 
-        <div class="row">
-            <div class="col-sm-12">
-                <p>
-                    <b>Desarrollador FullStack Multimedia</b>
-                </p>
-            </div>
-        </div>
+            <div class="row">
 
-        <div class="row">
-            <div class="col-sm-4"></div>
-            <div class="col-sm-4">
-                <div class="row headerBtn">
-                    <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Sobre Mi <i
-                                class="bi bi-person"></i></button></div>
-                    <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Contáctame <i
-                                class="bi bi-envelope"></i></button></div>
-                    <div class="col-lg-4"><button class="btn btn-primary HeaderButton">Descarga CV <i
-                                class="bi bi-caret-down-square-fill"></i></button></div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p class="myName">
+                            <i class="bi bi-lightbulb-fill"></i>¡Hola, Soy Juan Camilo! <i
+                                class="bi bi-lightbulb-fill"></i>
+                        </p>
+                    </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p>
+                            <b>Desarrollador FullStack Multimedia</b>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row headerBtn">
+                    <div class="col-lg-4">
+                        <button (click)="scrollToSection('aboutMe')" class="btn btn-primary HeaderButton">Sobre Mi <i class="bi bi-person"></i></button>
+                    </div>
+                    <div class="col-lg-4">
+                        <button (click)="scrollToSection('contactMe')"  class="btn btn-primary HeaderButton">Contáctame <i class="bi bi-envelope"></i></button>
+                    </div>
+                    <div class="col-lg-4">
+                        <button (click)="downloadPDF()" class="btn btn-primary HeaderButton">Descarga CV <i class="bi bi-file-earmark-arrow-down"></i></button>
+                    </div>
+                </div>
+
             </div>
-            <div class="col-sm-4"></div>
+
         </div>
+
+        <div class="col-sm-6 containerImage">
+
+            <img src="assets/buzzHand.PNG" alt="coverImage">
+
+        </div>
+
 
     </div>
 </div>
