--- a/src/app/domains/main/components/header/header.component.html
+++ b/src/app/domains/main/components/header/header.component.html
@@ -2,9 +2,9 @@
 <div class="Header  row">
     <div class="row">
 
-        <div class="col-sm-6 containerText">
+        <div class="col-lg-6 containerText">
 
-            <div class="row">
+            <div class="row containerTextRow">
 
                 <div class="row">
                     <div class="col-sm-12">
@@ -39,7 +39,7 @@
 
         </div>
 
-        <div class="col-sm-6 containerImage">
+        <div class="col-lg-6 containerImage">
 
             <img src="assets/buzzHand.PNG" alt="coverImage">
 
