--- a/src/app/domains/main/components/about-me/about-me.component.html
+++ b/src/app/domains/main/components/about-me/about-me.component.html
@@ -4,7 +4,7 @@
     <div class="col-sm-10">
         <div class="row">
 
-            <div class="col-sm-6 containerImage">
+            <div class="col-lg-6 containerImage">
 
                 <div class="framed-photo">
                     <img src="https://avatars.githubusercontent.com/u/43991800" alt="Foto">
@@ -12,7 +12,7 @@
 
             </div>
 
-            <div class="col-sm-6 containerText">
+            <div class="col-lg-6 containerText">
                 <div class="paralelepipedo">
                     <p>
                         <b>Sobre Mi</b>
