--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@
 
 /* Works on Firefox */
 * {
-    scrollbar-width: thin;
+    scrollbar-width: none;
     scrollbar-color: rgb(0, 119, 255) rgb(255, 255, 255);
   }
   
