--- a/src/app/domains/main/components/header/header.component.html
+++ b/src/app/domains/main/components/header/header.component.html
@@ -6,6 +6,8 @@
 
             <div class="row containerTextRow">
 
+                
+
                 <div class="row">
                     <div class="col-sm-12">
                         <p class="myName">
@@ -15,6 +17,7 @@
                     </div>
                 </div>
 
+                
                 <div class="row">
                     <div class="col-sm-12">
                         <p>
@@ -25,14 +28,26 @@
 
                 <div class="row headerBtn">
                     <div class="col-lg-4">
-                        <button (click)="scrollToSection('aboutMe')" class="btn btn-primary HeaderButton">Sobre Mi <i class="bi bi-person"></i></button>
+                        <button (click)="scrollToSection('aboutMe')" class="btn btn-primary HeaderButton">Sobre Mi <i
+                                class="bi bi-person"></i></button>
                     </div>
                     <div class="col-lg-4">
-                        <button (click)="scrollToSection('contactMe')"  class="btn btn-primary HeaderButton">Contáctame <i class="bi bi-envelope"></i></button>
+                        <button (click)="scrollToSection('contactMe')" class="btn btn-primary HeaderButton">Contáctame
+                            <i class="bi bi-envelope"></i></button>
                     </div>
                     <div class="col-lg-4">
-                        <button (click)="downloadPDF()" class="btn btn-primary HeaderButton">Descarga CV <i class="bi bi-file-earmark-arrow-down"></i></button>
+                        <button (click)="downloadPDF()" class="btn btn-primary HeaderButton">Descarga CV <i
+                                class="bi bi-file-earmark-arrow-down"></i></button>
                     </div>
+                </div>
+
+                <div class="row socialRedRow">
+                    <p class="d-flex justify-content-center gap-5">
+                        <a href="https://www.linkedin.com/in/juancamilosalazarserna/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://github.com/Jcss1462" target="_blank"><i class="bi bi-github"></i></a>
+                        <a href="https://www.instagram.com/jcss1462games/" target="_blank"><i class="bi bi-instagram"></i></a>
+                    
+                    </p>
                 </div>
 
             </div>
