Se optimizan todas las imagenes, Se añaden animaciones de animate.js, y se añaden elementos a los proyectos destacados y al stack

--- a/src/app/domains/main/components/header/header.component.html
+++ b/src/app/domains/main/components/header/header.component.html
@@ -56,7 +56,7 @@
 
         <div class="col-lg-6 containerImage">
 
-            <img src="assets/buzzHand.PNG" alt="coverImage">
+            <img src="assets/buzzHand.jpg" alt="coverImage">
 
         </div>
 
