--- a/src/app/domains/main/pages/main-page/main-page.component.html
+++ b/src/app/domains/main/pages/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <div class="principalContainer  row">
 
-    <app-header class="row"></app-header>
+    <app-header class="row animate__animated animate__fadeIn"></app-header>
 
     <app-about-me id="aboutMe" class="row"></app-about-me>
 
