ajuste de estilos

--- a/src/app/domains/main/components/about-me/about-me.component.css
+++ b/src/app/domains/main/components/about-me/about-me.component.css
@@ -71,3 +71,10 @@
         transform: skewX(30deg);
     }
 }
+
+@media (max-width: 465px) {
+
+    .containerText {
+        font-size: 1rem;
+    }
+}
