--- a/src/app/domains/main/components/experience/experience.component.html
+++ b/src/app/domains/main/components/experience/experience.component.html
@@ -22,8 +22,8 @@
 
     <div class="row">
 
-        <div class="col-sm-4"></div>
-        <div class="col-sm-4">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
 
             <div class="timeline">
 
@@ -65,7 +65,7 @@
             </div>
 
         </div>
-        <div class="col-sm-4"></div>
+        <div class="col-md-4"></div>
 
 
     </div>
