se ajusta el estilo de la foto de perfil

--- a/src/app/domains/main/components/about-me/about-me.component.css
+++ b/src/app/domains/main/components/about-me/about-me.component.css
@@ -77,4 +77,10 @@
     .containerText {
         font-size: 1rem;
     }
+
+    .framed-photo img {
+        display: block;
+        width: 200px;
+        border-radius: 50%;
+    }
 }
